<!-- Copyright (c) Microsoft. All rights reserved. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".persongroupmanagement.PersonGroupActivity">

    <RelativeLayout
        android:id="@+id/person_group_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/view_margin">

        <TextView
            android:id="@+id/person_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_group_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/edit_person_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/person_group_name"
            android:layout_toEndOf="@id/person_group_name"
            android:singleLine="true"
            android:maxLength="30"
            android:hint="@string/type_in_person_group_name_tip" />

        <TextView
            android:id="@+id/person_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:hint="@string/type_in_person_group_name_tip"
            android:maxLength="30"
            android:singleLine="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/person_group_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/info"
        android:layout_marginBottom="@dimen/view_margin"
        android:text="@string/person_group_tip" />



    <TextView
        android:id="@id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_bar"
        android:layout_gravity="center" />

    <GridView
        android:id="@+id/gridView_persons"
        android:layout_width="match_parent"
        android:layout_height="320dp" />


</LinearLayout>
