<!-- Copyright (c) Microsoft. All rights reserved. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:theme="@style/layouttheme"
    android:background="@drawable/background"
    tools:context=".ui.IdentificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@id/info"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="0.5">

            <com.example.sam.personmanagement.utils.FaceView
                android:id="@+id/faceview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/black"
                android:contentDescription="@string/detection"
                android:foregroundGravity="center" />


        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_marginBottom="@dimen/view_margin"-->
            <!--android:layout_weight="0.5">-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/person_group_control"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginRight="@dimen/view_margin">-->

                <!--<TextView-->
                    <!--android:id="@+id/text_person_group_selected"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:text="@string/person_groups" />-->

            <!--</RelativeLayout>-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/person_group_content"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_toEndOf="@id/person_group_control"-->
                <!--android:layout_toRightOf="@id/person_group_control">-->

                <!--<ListView-->
                    <!--android:id="@+id/list_person_groups_identify"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="#E0E0E0"-->
                    <!--android:verticalSpacing="@dimen/view_margin" />-->
            <!--</RelativeLayout>-->

        <!--</RelativeLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faces" />

        <ListView
            android:id="@+id/list_identified_faces"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:verticalSpacing="@dimen/view_margin" />

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/identify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:text="@string/identify"
            android:onClick="identify"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/view_log"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="viewLog"
            android:text="Stop" />

    </LinearLayout>

</LinearLayout>
